# framebox

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING.md  ecosystem.config.js  main.py  pyproject.toml  start.sh  test.sh
.github/workflows/: ci.yml
app/: config.py  database.py  models.py
app/api/: files.py  projects.py  static.py
app/utils/: file_validation.py  id_generator.py  network.py
docs/: TESTING.md
openspec/changes/iframe-hosting-service/: design.md  proposal.md  tasks.md
openspec/changes/iframe-hosting-service/specs/file-upload/: spec.md
openspec/changes/iframe-hosting-service/specs/project-management/: spec.md
openspec/changes/iframe-hosting-service/specs/static-serving/: spec.md
openspec/changes/iframe-hosting-service/specs/web-ui/: spec.md
scripts/: start.sh  test.sh
static/: app.js  index.html  style.css
