[project]
name = "iframe-server"
version = "0.1.0"
description = "Lightweight iframe hosting service for markdown embeds"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "aiosqlite>=0.20.0",
    "pydantic-settings>=2.6.0",
    "nanoid>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app", "app.api", "app.utils"]

[project.scripts]
iframe-server = "main:main"
